--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,11 @@
             <artifactId>javafx-base</artifactId>
             <version>20-ea+9</version>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>20-ea+9</version>
+        </dependency>
     </dependencies>
 
     <build>
