--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
             </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
+            <artifactId>javafx-media</artifactId>
+            <version>20-ea+9</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
             <artifactId>javafx-base</artifactId>
             <version>20-ea+9</version>
         </dependency>
